@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.1-0.008
-Date: 2023-03-19
+Version: 3.1-0.009
+Date: 2023-03-21
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
